<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hardydrachmann.compulsoryassignment1.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace2"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel3"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace3"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel4"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace4"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel5"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace5"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/diceLabel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceLabel6"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/diceFace6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDiceFace6"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnRollDice"
        android:layout_gravity="bottom"
        android:layout_toLeftOf="@+id/btnRollDice"
        android:layout_toStartOf="@+id/btnRollDice"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btnRollDice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHistory"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:text="@string/btnRollDice" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:text="@string/btnHistory" />

</RelativeLayout>
